[project]
name = "PyMessagingFramework"
version = "1.1.0"
authors = [
  { name="Zuhair Mehtab", email="zuhairmhtb@gmail.com" },
]
description = "Messaging infrastructure for communication between microservices in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["messaging", "rabbitmq", "infrastructure", "microservice"]
dependencies = [
    'pika ~= 1.3.0'
]

[project.urls]
"Homepage" = "https://github.com/zuhairmhtb/PyMessagingFramework"
"Bug Tracker" = "https://github.com/zuhairmhtb/PyMessagingFramework/issues"