[tool.poetry]
name = "PyMessagingFramework"
version = "2.0.0"
description = "Messaging infrastructure for communication between microservices in Python"
authors = ["zuhairmhtb <zuhairmhtb@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["messaging", "rabbitmq", "infrastructure", "microservice"]

[tool.poetry.dependencies]
python = ">= 3.4"
pika = "1.3.0"

[project.urls]
"Homepage" = "https://github.com/zuhairmhtb/PyMessagingFramework"
"Bug Tracker" = "https://github.com/zuhairmhtb/PyMessagingFramework/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
